# arima-garch

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FORECAST_COMMAND_VERIFICATION.md  Makefile  README.md
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
_codeql_build_dir/examples/: example_basic
_codeql_build_dir/src/: ag-cli
_codeql_build_dir/tests/: test_placeholder
benchmarks/: CMakeLists.txt  bench_likelihood.cpp  bench_optimizer.cpp
cmake/: GetVersion.cmake  Version.hpp.in
docs/: arima_residuals.md  cli.md  dependencies.md  file_formats.md  ljung_box_bootstrap_investigation.md  model_selection.md  parameter_constraints.md  parameter_initialization.md  project_review_20260617.md  style.md  versioning.md
examples/: CMakeLists.txt  example_acf_pacf.cpp  example_arima_residuals.cpp  example_basic.cpp  example_candidate_grid.cpp  example_constraints.cpp  example_cross_validation.cpp  example_csv_io.cpp  example_diagnostic_report.cpp  example_engine_api.cpp  example_fit_summary.cpp  example_initialization.cpp  example_json_io.cpp  example_ljung_box.cpp  example_model_selector.cpp  example_residuals.cpp  example_simulation.cpp  returns.csv
examples/terminal/: .gitignore  README.md  _common.sh
examples/terminal/data/: returns.csv  returns_multicol.csv  returns_noheader.csv
examples/terminal/scripts/: 01_fit_basic.md  01_fit_basic.sh  02_fit_student_t.md  02_fit_student_t.sh  03_fit_csv_options.md  03_fit_csv_options.sh  04_select_bic.md  04_select_bic.sh  05_select_aic_topk.md  05_select_aic_topk.sh  06_select_cv.md  06_select_cv.sh  07_forecast.md  07_forecast.sh  08_sim_gaussian.md  08_sim_gaussian.sh  09_sim_student_t.md  09_sim_student_t.sh  10_simulate_paths.md  10_simulate_paths.sh  11_diagnostics.md  11_diagnostics.sh  12_reproducibility.md  12_reproducibility.sh  13_end_to_end.md  13_end_to_end.sh  run_all.sh
include/ag/: arima_garch.hpp
include/ag/api/: Engine.hpp
include/ag/cli/: CliUtils.hpp
include/ag/data/: TimeSeries.hpp
include/ag/diagnostics/: DiagnosticReport.hpp  Residuals.hpp
include/ag/estimation/: Constraints.hpp  FitDriver.hpp  InnovationSpec.hpp  Likelihood.hpp  NumericalDerivatives.hpp  Optimizer.hpp  ParameterInitialization.hpp  ParameterVector.hpp
include/ag/forecasting/: Forecaster.hpp
include/ag/io/: CsvReader.hpp  CsvWriter.hpp  Json.hpp
include/ag/models/: ArimaGarchSpec.hpp  ArimaSpec.hpp  GarchSpec.hpp
include/ag/models/arima/: ArimaModel.hpp  ArimaState.hpp
include/ag/models/composite/: ArimaGarchModel.hpp
include/ag/models/garch/: GarchModel.hpp  GarchState.hpp
include/ag/report/: FitSummary.hpp
include/ag/selection/: CandidateGrid.hpp  CrossValidation.hpp  DistributionSelector.hpp  InformationCriteria.hpp  ModelSelector.hpp
include/ag/simulation/: ArimaGarchSimulator.hpp  Innovations.hpp
include/ag/stats/: ACF.hpp  ADF.hpp  Bootstrap.hpp  Descriptive.hpp  JarqueBera.hpp  LjungBox.hpp  PACF.hpp  SpecialFunctions.hpp
include/ag/util/: Differencing.hpp  Expected.hpp  LinearAlgebra.hpp  Logging.hpp  NumericConstants.hpp  SlidingWindow.hpp  Timer.hpp
python/: README.md  pyproject.toml  requirements.txt  setup.py
python/ag_viz/: __init__.py  cli.py  io.py  markdown_reports.py  plotting.py  utils.py
python/ag_viz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/examples/: visualization_demo.ipynb
python/tests/: test_io.py  test_markdown_reports.py  test_plotting.py
scripts/: README.md  check-format.sh  format.sh  update_version.sh
src/: CMakeLists.txt  arima_garch.cpp  main.cpp
src/api/: Engine.cpp
src/cli/: CliUtils.cpp  Handlers.hpp  main.cpp
src/cli/handlers/: DiagnosticsHandler.cpp  FitHandler.cpp  ForecastHandler.cpp  SelectHandler.cpp  SimulateFromModelHandler.cpp  SimulateHandler.cpp
src/data/: TimeSeries.cpp
src/diagnostics/: DiagnosticReport.cpp  Residuals.cpp
src/estimation/: Constraints.cpp  FitDriver.cpp  Likelihood.cpp  NumericalDerivatives.cpp  Optimizer.cpp  ParameterInitialization.cpp  ParameterVector.cpp
src/forecasting/: Forecaster.cpp
src/io/: CsvReader.cpp  CsvWriter.cpp  Json.cpp
src/models/arima/: ArimaModel.cpp  ArimaState.cpp
src/models/composite/: ArimaGarchModel.cpp
src/models/garch/: GarchModel.cpp  GarchState.cpp
src/report/: FitSummary.cpp
src/selection/: CandidateGrid.cpp  CrossValidation.cpp  DistributionSelector.cpp  InformationCriteria.cpp  ModelSelector.cpp
src/simulation/: ArimaGarchSimulator.cpp  Innovations.cpp
src/stats/: ACF.cpp  ADF.cpp  Bootstrap.cpp  Descriptive.cpp  JarqueBera.cpp  LjungBox.cpp  PACF.cpp  SpecialFunctions.cpp
src/util/: Differencing.cpp  LinearAlgebra.cpp  Logging.cpp  Timer.cpp
tests/: CMakeLists.txt  test_placeholder.cpp
tests/fixtures/: simple.csv  tiny_returns.csv  with_date.csv  with_header.csv
tests/unit/: test_api_engine.cpp  test_data_timeseries.cpp  test_diagnostics_report.cpp  test_diagnostics_residuals.cpp  test_engine_student_t_diagnostics.cpp  test_estimation_constraints.cpp  test_estimation_initialization.cpp  test_estimation_likelihood.cpp  test_estimation_numerical_derivatives.cpp  test_estimation_optimizer.cpp  test_estimation_parameters.cpp  test_forecasting.cpp  test_framework.cpp  test_framework.hpp  test_integration_e2e.cpp  test_io_csv.cpp  test_io_json.cpp  test_ljung_box_model_misspecification.cpp  test_models_arima.cpp  test_models_composite.cpp  test_models_differencing.cpp  test_models_garch.cpp  test_models_specs.cpp  test_report_fit_summary.cpp  test_sanity.cpp  test_selection_candidate_grid.cpp  test_selection_cross_validation.cpp  test_selection_distribution_selector.cpp  test_selection_information_criteria.cpp  test_selection_model_selector.cpp  test_simulation.cpp  test_stats_acf.cpp  test_stats_adf.cpp  test_stats_bootstrap.cpp  test_stats_descriptive.cpp  test_stats_jarquebera.cpp  test_stats_ljungbox.cpp  test_stats_pacf.cpp  test_util_expected.cpp  test_util_logging.cpp  (+1 more)
