[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ag-viz"
# Version is derived from the repo's most recent vX.Y.Z git tag by
# setuptools-scm. See docs/versioning.md.
dynamic = ["version"]
description = "Visualization tools for ARIMA-GARCH models"
readme = "README.md"
authors = [
    {name = "rtrimble13"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["arima", "garch", "time-series", "forecasting", "visualization", "finance"]
dependencies = [
    "click>=8.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "jupyter>=1.0",
    "notebook>=6.4",
]

[project.scripts]
ag-viz = "ag_viz.cli:cli"

[project.urls]
Homepage = "https://github.com/rtrimble13/arima-garch"
Repository = "https://github.com/rtrimble13/arima-garch"
Issues = "https://github.com/rtrimble13/arima-garch/issues"

[tool.setuptools_scm]
# This pyproject.toml lives in python/; the git repo root is one level up.
root = ".."
# Match the same vX.Y.Z tags that the C++ side reads.
tag_regex = '^v(?P<version>[0-9]+\.[0-9]+\.[0-9]+)$'
# Bake the resolved version into a generated file (gitignored).
version_file = "ag_viz/_version.py"
# Used only if neither git nor a baked-in version is available
# (e.g. installing from a bare source tarball without .git).
fallback_version = "0.0.0+unknown"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
